--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.2",
+    "husky": "^7.0.0",
     "jest": "^27.1.1",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.0",
+    "pretty-quick": "^3.1.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
